<resources>
    <string name="app_name">LightSaver</string>
    <string name="notif">Notification</string>
    <string name="button_on">TURN OFF</string>
    <string name="button_off">TURN ON</string>
    <string name="bright">Bright</string>
    <string name="button">Light</string>
    <string name="color">Color</string>

    <string name="button_connect">Connect</string>
    <string name="button_retry">Retry</string>
    <string name="error_network_disconnected">Network disconnected…</string>
    <string name="title_settings">Settings</string>
    <string name="pref_address">Address</string>
    <string name="pref_ssid">WiFi Name (SSID)</string>
    <string name="pref_address_value" translatable="false">http://192.168.4.1</string>
    <string name="pref_server">Access Point</string>
    <string name="pref_address_description">Enter the name for the access point.</string>
    <string name="pref_password">WiFi Password</string>
    <string name="pref_password_description">Enter the password for the access point.</string>
    <string name="toast_network_connected">Network connected…</string>
    <string name="button_send">Send</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="activity_logs">Logs</string>
    <string name="activity_settings">Settings</string>
    <string name="alert_title_error">Error</string>
    <string name="toast_blak_value">The value not be blank...</string>
    <string name="error_empty_address">The network address is empty, please enter the address in the settings.</string>
</resources>