<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="235dp"
        android:layout_height="235dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/tooglebutton_selector"
        android:textOff="@string/button_off"
        android:textOn="@string/button_on"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonText" />

    <TextView
        android:id="@+id/buttonText"
        android:layout_width="113dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="1dp"
        android:text="@string/button"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/toggleButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="127dp"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:text="@string/color"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toStartOf="@+id/toggleButton"
        app:layout_constraintStart_toStartOf="@+id/toggleButton"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="63dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/buttonDisconnect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <Button
            android:id="@+id/yellowButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/color_yellow"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/greenButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/color_green"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/purpleButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/color_purple"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/redButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/color_red"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/blueButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/color_blue"
            app:backgroundTint="@null" />
    </LinearLayout>


    <Switch
        android:id="@+id/switch1"
        android:layout_width="168dp"
        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="34dp"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/notif"
        android:textOff="No"
        android:textOn="Yes"
        app:layout_constraintBottom_toTopOf="@+id/buttonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDisconnect"
        style="@style/ButtonRed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="67dp"
        android:text="@string/button_disconnect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>
